@@ -1,3 +1,8 @@
+2011-02-23  Andreas K. Foerster  <info@akfoerster.de>
+
+	* pascal/akfavatar.pas (LoadRawSoundData, AddRawSoundData):
+	new functions
+
 2011-02-22  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar-audio.c (avt_pause_audio): new function
